# django_svelte_combo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  example.env  gunicorn_conf.py  layout.svelte  manage.py  package.json  pyproject.toml  pyproject_sample.toml  sample.env  vite.config.js
.github/workflows/: django.yml
config/: __init__.py  allauth.py  asgi.py  celery.py  celery_app.py  celery_config.py  schedule.py  settings.py  telegram.py  unfold.py  urls.py  wsgi.py
config/celery/: __init__.py  config.py
config/debug/: __init__.py  debug_toolbar_config.py  requests_tracker_config.py
config/svelte/: __init__.py  base_render.py  config.py  middleware.py  render.py  responses.py  validation.py  view.py
config/telegram/: __init__.py  config.py  emitter.py  handler.py
frontend/: layout.svelte  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
src/: __init__.py
src/adminlte/: __init__.py  apps.py  tasks.py  urls.py  views.py
src/adminlte/pages/: __init__.py  about.py  about.svelte  fixed-sidebar.html  home.py  home.svelte
src/core/: __init__.py  admin.py  apps.py
src/core/admins/: __init__.py  base.py
src/core/management/: __init__.py
src/core/management/commands/: __init__.py  init_project.py
src/core/templates/: inertia.html  svelte.html
src/users/: __init__.py  adapters.py  admin.py  apps.py  context_processors.py  forms.py  managers.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
static/js/: main.js  removeEntriesPlugin.js
static/plugins/bootstrap-colorpicker/js/: bootstrap-colorpicker.js
static/plugins/chart.js/: Chart.bundle.js  Chart.js
static/plugins/codemirror/addon/lint/: json-lint.js
static/plugins/codemirror/mode/verilog/: verilog.js
static/plugins/dropzone/: dropzone-amd-module.js
static/plugins/icheck-bootstrap/: icheck-bootstrap.css  icheck-bootstrap.min.css
static/plugins/inputmask/: inputmask.js  jquery.inputmask.js
static/plugins/jquery-mapael/: jquery.mapael.js
static/plugins/jquery-validation/: additional-methods.js  jquery.validate.js
static/plugins/jsgrid/i18n/: jsgrid-ja.js
static/plugins/jszip/: jszip.js
static/plugins/overlayScrollbars/css/: OverlayScrollbars.min.css
static/plugins/overlayScrollbars/js/: OverlayScrollbars.js  jquery.overlayScrollbars.js
static/plugins/pdfmake/: pdfmake.js  vfs_fonts.js
static/plugins/raphael/: Gruntfile.js
static/plugins/uplot/: uPlot.cjs.js  uPlot.esm.js  uPlot.iife.js
templates/: svelte.html
